--- a/_sources/topics/1b_variabelen_en_operatoren.ipynb
+++ b/_sources/topics/1b_variabelen_en_operatoren.ipynb
@@ -75,7 +75,7 @@
    "id": "bdbf7378-0324-4b6e-b4d9-def0aa2f5b7e",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
@@ -875,7 +875,7 @@
    "id": "727fc4f7",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "notes"
     },
     "tags": []
    },
