correct sleep time

--- a/topics/3a_lussen_en_strings.ipynb
+++ b/topics/3a_lussen_en_strings.ipynb
@@ -765,7 +765,7 @@
     "        for (int hour = 0; hour < 24; hour++) {\n",
     "            for (int minute = 0; minute < 60; minute++) {\n",
     "                System.out.printf(\"De tijd is %02d:%02d\\n\", hour, minute);\n",
-    "                TimeUnit.SECONDS.sleep(1);\n",
+    "                TimeUnit.SECONDS.sleep(60); // sleep 60 seconds\n",
     "            }\n",
     "        }\n",
     "    }\n",
