--- a/_sources/topics/3a_lussen_en_strings.ipynb
+++ b/_sources/topics/3a_lussen_en_strings.ipynb
@@ -938,7 +938,7 @@
    "source": [
     "### Unicode\n",
     "\n",
-    "[Unicode](https://nl.wikipedia.org/wiki/Unicode) is een superset van [ASCII](https://nl.wikipedia.org/wiki/ASCII_(tekenset))\n",
+    "[Unicode](https://nl.wikipedia.org/wiki/Unicode) is een superset van [ASCII](https://nl.wikipedia.org/wiki/ASCII_(tekenset)\n",
     "\n",
     "![ASCII table](images/3/ascii_table.png)"
    ]
