--- a/topics/4a_recursie.ipynb
+++ b/topics/4a_recursie.ipynb
@@ -187,7 +187,7 @@
     "tags": []
    },
    "source": [
-    "In de vorige voorbeelden werd \"Blastoff!\" altijd na de lus geprint, maar eigenlijk is het onderdeel van de iteratie, want in dit voorbeeld wordt afgeteld tot en met 0. Alleen zal bij een raketlancering deze 0 niet worden genoemd door de vluchtleiding."
+    "In de vorige voorbeelden werd \"Blastoff!\" altijd na de lus geprint, maar eigenlijk is het onderdeel van de iteratie want er wordt afgeteld tot en met 0. Alleen zal bij een raketlancering deze 0 niet worden genoemd door de vluchtleiding."
    ]
   },
   {
@@ -200,7 +200,7 @@
     "tags": []
    },
    "source": [
-    "Hoe kan deze conditie worden beschreven in een algemene vorm voor elke `n`?"
+    "Hoe kan deze conditie worden beschreven in een algemene vorm voor *elke* `n`?"
    ]
   },
   {
@@ -280,12 +280,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "1000\n"
      ]
     }
    ],
    "source": [
-    "countdown(100)"
+    "countdown(1000)"
    ]
   },
   {
@@ -323,7 +323,7 @@
    "source": [
     "Maar hoe kunnen we zorgen voor het *herhaald* aanroepen van deze methode voor voor het aftellen vanaf `n`?\n",
     "\n",
-    "Bedenk dat elke volgende stap $N - 1$ is, en daar hebben we al een oplossing voor, namelijk de methode `countdown`, als aanroep van zichzelf!"
+    "Bedenk dat elke volgende stap $N - 1$ is, en daar hebben we al een oplossing voor, namelijk de methode `countdown` zelf!"
    ]
   },
   {
@@ -358,7 +358,7 @@
     "tags": []
    },
    "source": [
-    "Zolang `n` groter of gelijk is aan 0 zal (naast het printen van de waarde) zal de methode worden aangeroepen voor $N -1$."
+    "Zolang `n` groter of gelijk is aan 0 zal (naast het printen van de waarde) de methode worden aangeroepen voor $N -1$."
    ]
   },
   {
@@ -931,7 +931,7 @@
     {
      "data": {
       "text/plain": [
-       "[I@14235905"
+       "[I@4f600f85"
       ]
      },
      "execution_count": 20,
