--- a/topics/4a_recursie.ipynb
+++ b/topics/4a_recursie.ipynb
@@ -187,7 +187,7 @@
     "tags": []
    },
    "source": [
-    "In de vorige voorbeelden werd \"Blastoff!\" altijd na de lus geprint, maar eigenlijk is het onderdeel van de iteratie want er wordt afgeteld tot en met 0. Alleen zal bij een raketlancering deze 0 niet worden genoemd door de vluchtleiding."
+    "In de vorige voorbeelden werd \"Blastoff!\" altijd na de lus geprint, maar eigenlijk is het onderdeel van de iteratie want bij een lancering van een raket wordt afgeteld tot en met 0 (waar \"Blastoff!\" in plaats van 0 door de vluchtleiding zal worden genoemd)."
    ]
   },
   {
