--- a/about/references.bib
+++ b/about/references.bib
@@ -29,3 +29,10 @@
   author = {Miller, Brad and Riely, James},
   year   = {2013}
 }
+
+ @misc{rhodes_2018,
+  title  = {Python Design Patterns},
+  url    = {https://python-patterns.guide/},
+  author = {Rhodes, Brandon},
+  year   = {2018}
+}
