--- a/topics/8_interfaces.ipynb
+++ b/topics/8_interfaces.ipynb
@@ -1030,7 +1030,9 @@
     "tags": []
    },
    "source": [
-    "De `Iterable` inteface definiëert een methode `iterator` die door `ArrayList` is geïmplementeerd. We kunnen van dit gegeven begruik maken om eigen typen *iterable* te maken."
+    "De `Iterable` inteface definiëert een methode `iterator` die door `ArrayList` is geïmplementeerd. We kunnen van dit gegeven gebruik maken om eigen typen *iterable* te maken.\n",
+    "\n",
+    "Terzijde, je zag dat we via de iterator ook elementen *veilig* kunnen verwijderen!"
    ]
   },
   {
