--- a/_sources/topics/9a_design_patterns.ipynb
+++ b/_sources/topics/9a_design_patterns.ipynb
@@ -101,7 +101,7 @@
     "tags": []
    },
    "source": [
-    "In object georiënteerd software design is ook sprake van design patterns. Dit zijn algemeen bruikbare patronen, maar kunnen meer of minder relevant zijn per taal, omdat de taal bepaalde kenmerken of gedrag heeft die sommige patronen overbodig of mnder relevant maakt. De design patterns die de *big four* bespraken hebben een duidelijke oorsprong in de taal C++ maar zijn ook toepasbaar in talen als Java en C#. "
+    "In object georiënteerd software design is ook sprake van design patterns. Dit zijn algemeen bruikbare patronen, maar kunnen meer of minder relevant zijn per taal, omdat de taal bepaalde kenmerken of gedrag heeft die sommige patronen overbodig of mnder relevant maakt. De design patterns die de auteurs (ook soms de *gang of four* genoemd) bespraken hebben een duidelijke oorsprong in de taal C++ maar zijn ook toepasbaar in talen als Java en C#."
    ]
   },
   {
@@ -701,7 +701,7 @@
    "source": [
     "Je gaat kennis maken met principes van object georiënteerd software ontwerp in de vorm van algemene patronen die op te delen zijn in de bovenstaande categoriëen. Dit zijn de patronen die oorspronkelijk zijn beschreven in \"Design Patterns: Elements of Reusable Object-Oriented Software\".\n",
     "\n",
-    "De specifieke patronen die zijn geïdentificeerd door de \"big four\" kunnen als volgt worden onderverdeeld:"
+    "De specifieke patronen die zijn geïdentificeerd door de \"gang of four\" kunnen als volgt worden onderverdeeld:"
    ]
   },
   {
