some slight editing

--- a/exercises/observer_pattern.ipynb
+++ b/exercises/observer_pattern.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "source": [
     "# Practicum observer pattern\n",
+    "\n",
     "## Doel\n",
     "- Kennismaken met het observer pattern"
    ]
@@ -20,11 +21,11 @@
     "\n",
     "De waarde van cryptomunten (zoals bitcoin) verandert voortdurend. In realtime koersoverzichten is te zien dat de koers van cryptomunten voortdurend verandert (fluctueert).\n",
     "\n",
-    "In deze opgave staan twee classes centraal: Coin en Market.\n",
+    "In deze opgave staan twee classes centraal: `Coin` en `Market`.\n",
     "\n",
-    "De klasse Coin representeert een cryptomunt. De klasse Market bevat cryptomunten en zorgt ervoor fluctuatie wordt gesimuleerd.\n",
+    "De klasse `Coin` representeert een cryptomunt. De klasse `Market` bevat cryptomunten en zorgt ervoor fluctuatie wordt gesimuleerd.\n",
     "\n",
-    "Verder is er een klasse Main, die er voor zorgt dat alle klassen worden gemaakt en met elkaar worden gekoppeld.\n",
+    "Verder is er een klasse `Main`, die er voor zorgt dat alle klassen worden gemaakt en met elkaar worden gekoppeld.\n",
     "\n",
     "````{note} Simulatie\n",
     "De simulatie van de cryptomarkt in deze opgave is een sterk vereenvoudige versie van de werkelijkheid. Zo is in werkelijkheid de ene cryptomunt meer volatiel (veranderlijkheid van koers) dan de andere, terwijl in deze simulatie de cryptomunten op dezelfde wijze (willekeurig) van koers veranderen.\n",
@@ -36,11 +37,11 @@
    "id": "0cef807a",
    "metadata": {},
    "source": [
-    "## Klasse Coin\n",
+    "## De klasse `Coin`\n",
     "\n",
     "Maak een nieuw project. Maak binnen het project een package met de naam **crypto**.\n",
     "\n",
-    "Maak in de package crypto de klasse Coin met de volgende inhoud:\n",
+    "Maak in de package crypto de klasse `Coin` met de volgende inhoud:\n",
     "```Java\n",
     "package crypto;\n",
     "\n",
@@ -73,7 +74,7 @@
     "}\n",
     "```\n",
     "\n",
-    "De klasse **Coin** heeft twee instantie-variabelen: **name** en **price**. De variabele **name** is de naam van de munt en **prijs** de prijs (waarde) in euro's.\n",
+    "De klasse `Coin` heeft twee instantie-variabelen: **name** en **price**. De variabele **name** is de naam van de munt en **prijs** de prijs (waarde) in euro's.\n",
     "\n",
     "Ze worden geïnitialiseerd via de constructor en kunnen worden opgevraagd via getters.\n",
     "\n",
@@ -85,9 +86,9 @@
    "id": "d758d2eb",
    "metadata": {},
    "source": [
-    "## Klasse Market\n",
+    "## De klasse `Market`\n",
     "\n",
-    "De klasse **Market** is een gesimuleerde cryptomarkt.\n",
+    "De klasse `Market` is een gesimuleerde cryptomarkt.\n",
     "\n",
     "Voeg deze klasse toe aan het project, aan de hand van onderstaande code:\n",
     "```Java\n",
@@ -168,27 +169,27 @@
     "}\n",
     "```\n",
     "\n",
-    "De belangrijkste instantie-variabele is **coins**. Deze bevat een lijst van aanwezige coins in de market. Met de methoden **addCoin** en **removeCoin** kunnen deze worden toegevoegd en verwijderd.\n",
+    "De belangrijkste instantie-variabele is `coins`. Deze bevat een lijst van aanwezige coins in de market. Met de methoden `addCoin` en `removeCoin` kunnen deze worden toegevoegd en verwijderd.\n",
     "\n",
-    "Informatie over de coins op de market kan opgehaald worden met de methodes **getNumberOfCoins**, **getCoinName** en **getCoinPrice**. \n",
+    "Informatie over de coins op de market kan opgehaald worden met de methodes `getNumberOfCoins`, `getCoinName` en `getCoinPrice`. \n",
     "\n",
-    "De methode **fluctuate** laat de koersen fluctueren door de methode **fluctuate** van elke coin aan te roepen.\n",
+    "De methode `fluctuate` laat de koersen fluctueren door de methode `fluctuate` van elke coin aan te roepen.\n",
     "\n",
-    "Meest complexe deel van de klasse **Market** is de constructor.\n",
+    "Meest complexe deel van de klasse `Market` is de constructor.\n",
     "\n",
     "De regel \n",
     "```java\n",
     "new Thread(this).start();\n",
     "```\n",
-    "zorgt ervoor dat een *thread* wordt aangemaakt met het **market**-oject (*this*). Deze thread wordt direct gestart.\n",
+    "zorgt ervoor dat een *thread* wordt aangemaakt met het `Market`-oject (*this*). Deze thread wordt direct gestart.\n",
     "\n",
     "De regel\n",
     "```java\n",
     "coins=Collections.synchronizedList(new ArrayList<>());\n",
     "```\n",
-    "maakt een *thread safe* ArrayList aan. Deze heeft exact dezelfde functionaliteit als een reguliere arraylist, maar is geschikt om binnen een multi threaded programma te gebruiken.\n",
+    "maakt een *thread safe* `ArrayList` aan. Deze heeft exact dezelfde functionaliteit als een reguliere arraylist, maar is geschikt om binnen een multi threaded programma te gebruiken.\n",
     "\n",
-    "De **run**-methode bevat de code die wordt uitgevoerd door de *thread*. Deze methode bevat een oneindige loop. Als eerste wordt de methode **fluctuate** aangeroepen. Vervolgens wordt een pauze ingelast met een willekeurige tijdsduur tussen 0,3 en 2,0 seconden. Daardoor zijn niet alleen de omvang van de koersveranderingen willekeurig, maar ook het moment waarop de koers verandert.\n"
+    "De `run`-methode bevat de code die wordt uitgevoerd door de *thread*. Deze methode bevat een oneindige loop. Als eerste wordt de methode `fluctuate` aangeroepen. Vervolgens wordt een pauze ingelast met een willekeurige tijdsduur tussen 0,3 en 2,0 seconden. Daardoor zijn niet alleen de omvang van de koersveranderingen willekeurig, maar ook het moment waarop de koers verandert.\n"
    ]
   },
   {
@@ -196,9 +197,9 @@
    "id": "9ce597e9",
    "metadata": {},
    "source": [
-    "## Klasse Main\n",
+    "## De klasse `Main`\n",
     "\n",
-    "Maak een klasse **Main** met een *main-methode*.\n",
+    "Maak een klasse `Main` met een *main-methode*.\n",
     "    \n",
     "Met de onderstaande code wordt de market gemaakt, drie cryptomunten en worden deze munten toegevoegd aan de market:\n",
     "```java\n",
@@ -241,13 +242,13 @@
     "\n",
     "Er is geen communicatie tussen de threads. Daarom worden koersveranderingen niet onmiddellijk weergegeven. Of worden de koersen opnieuw weergegeven terwijl er geen sprake is van koersverandering.\n",
     "\n",
-    "Een mogelijke oplossing voor dit probleem is de code om koersen weer te geven toevoegen aan **Market**, of om de methode om de koersen weer te geven vanuit **Market** aanroepen.\n",
+    "Een mogelijke oplossing voor dit probleem is de code om koersen weer te geven toevoegen aan `Market`, of om de methode om de koersen weer te geven vanuit `Market` aanroepen.\n",
     "\n",
-    "Dit is echter niet gewenst. De **Market** zou volledig onafhankelijk moeten kunnen functioneren van weergave.\n",
+    "Dit is echter niet gewenst. De `Market` zou volledig onafhankelijk moeten kunnen functioneren van weergave.\n",
     "\n",
-    "Het observer pattern biedt de mogelijkheid voor *loose coupling* tussen Market en weergave.\n",
+    "Het observer pattern biedt de mogelijkheid voor *loose coupling* tussen `Market` en weergave.\n",
     "\n",
-    "Daarbij is de klasse om weergave te regelen een *observer*, en is de Market *observable* (ook wel *subject* genoemd).\n",
+    "Daarbij is de klasse om weergave te regelen een *observer*, en is de `Market` *observable* (ook wel *subject* genoemd).\n",
     "\n",
     "In vier stappen wordt het bestaande project aangepast aan het observer pattern."
    ]
@@ -261,14 +262,14 @@
     "\n",
     "Maak de interfaces voor de observer en observable (subject).\n",
     "\n",
-    "De interface Subject bevat de volgende methode-definities:\n",
+    "De interface `Subject` bevat de volgende methode-definities:\n",
     "```java\n",
     "    public void registerObserver(Observer o);\n",
     "    public void removeObserver(Observer o);\n",
     "    public void notifyObservers();\n",
     "```\n",
     "\n",
-    "De interface Observer bevat de volgende methode-definitie:\n",
+    "De interface `Observer` bevat de volgende methode-definitie:\n",
     "```Java\n",
     "    public void update(Market market);\n",
     "```"
@@ -279,15 +280,15 @@
    "id": "676f6cf6",
    "metadata": {},
    "source": [
-    "## Stap 2: Van klasse **Market** een observable maken\n",
+    "## Stap 2: Van klasse `Market` een observable maken\n",
     "\n",
-    "- Laat de klasse Market de interface Subject implementeren\n",
-    "- Voeg de volgende klasse-variabele toe aan Market:\n",
+    "- Laat de klasse `Market` de interface `Subject` implementeren\n",
+    "- Voeg de volgende klasse-variabele toe aan `Market`:\n",
     "```Java\n",
     "private List<Observer> observers = new ArrayList<>();\n",
     "```\n",
-    "- Schrijf implementaties voor de methoden **registerObserver** en **removeObserver**. Dit zijn eenvoudige methodes, om een observer toe te voegen aan of te verwijderen uit de lijst **observers**.\n",
-    "- Schrijf de implementatie voor de methode **notifyObservers**. Deze methode bestaat uit een loop door de lijst **observers**. In de loop wordt de methode **update** van elke observer aangeroepen, met argument *this*.\n",
+    "- Schrijf implementaties voor de methoden `registerObserver` en `removeObserver`. Dit zijn eenvoudige methodes, om een observer toe te voegen aan of te verwijderen uit de lijst `observers`.\n",
+    "- Schrijf de implementatie voor de methode `notifyObservers`. Deze methode bestaat uit een loop door de lijst `observers`. In de loop wordt de methode `update` van elke observer aangeroepen, met argument *this*.\n",
     "\n",
     "Test of het programma nog functioneert. Als het goed is, heeft de toegevoegde functionaliteit geen invloer op de werking van het programma.\n"
    ]
@@ -299,9 +300,9 @@
    "source": [
     "## Stap 3: Een observer maken\n",
     "\n",
-    "Maak een klasse met de naam **CryptoConsole**, die de interface **Observer** implementeert.\n",
+    "Maak een klasse met de naam `CryptoConsole`, die de interface `Observer` implementeert.\n",
     "\n",
-    "Schrijf de implementatie voor de methode **update**.\n",
+    "Schrijf de implementatie voor de methode `update`.\n",
     "\n",
     "Deze methode bevat de code om de munten en koersen weer te geven die al in de main-methode staat:\n",
     "```java\n",
@@ -340,22 +341,22 @@
     "\n",
     "Naast *loose coupling* tussen weergave van de coins en de market biedt het observer pattern ook de mogelijkheid om verschillende, onafhankelijk van elkaar functionerende, weergaven te maken.\n",
     "\n",
-    "De klasse **CryptoAlltimeHighNotification** is een observer die van een bepaalde coin een melding op de console afdrukt als de koers een recordhoogte bereikt.\n",
+    "De klasse `CryptoAlltimeHighNotification` is een observer die van een bepaalde coin een melding op de console afdrukt als de koers een recordhoogte bereikt.\n",
     "\n",
     "Bijvoorbeeld in het geval van Bitcoin:\n",
     "```\n",
     "Alltime high!! BTC Bitcoin € 65238.094771831886\n",
     "```\n",
     "\n",
-    "Een instantie van **CryptoAlltimeHighNotification** moet één specifieke coin in de gaten houden.\n",
+    "Een instantie van `CryptoAlltimeHighNotification` moet één specifieke coin in de gaten houden.\n",
     "\n",
-    "In de huidige versie van de klasse **Market** worden coins benaderd aan de hand van een index. Dit is echter geen *unieke identifier* voor een coin. De index kan veranderen als een coin verwijderd wordt.\n",
+    "In de huidige versie van de klasse `Market` worden coins benaderd aan de hand van een index. Dit is echter geen *unieke identifier* voor een coin. De index kan veranderen als een coin verwijderd wordt.\n",
     "\n",
     "Elke cryptomunt heeft een eigen afkorting. Deze wordt ook wel *code* genoemd. Zo is de afkorting BTC voor Bitcoin, en XRP voor Ripple.\n",
     "\n",
     "Dit is een geschikte *unieke identifier*.\n",
     "\n",
-    "Om munten te vinden op basis van afkorting, moeten eerst de klassen **Coin** en **Market** worden aangepast."
+    "Om munten te vinden op basis van afkorting, moeten eerst de klassen `Coin` en `Market` worden aangepast."
    ]
   },
   {
@@ -365,14 +366,14 @@
    "source": [
     "## Code als unieke identifier\n",
     "\n",
-    "Voeg de klasse variabele **code**, type **String** toe aan de klasse **Coin**.\n",
+    "Voeg de klasse variabele `code`, type `String` toe aan de klasse `Coin`.\n",
     "\n",
     "Pas de constructor aan, zodat deze de volgende definitie krijgt:\n",
     "```Java\n",
     "public Coin(String code, String name, double price)\n",
     "```\n",
     "\n",
-    "Maak een *getter* voor **code**.\n",
+    "Maak een *getter* voor `code`.\n",
     "\n",
     "Voeg aan de klasse Market de volgende methodes toe:\n",
     "```Java\n",
@@ -385,7 +386,7 @@
     "    private Coin findCoinByCode(String code)\n",
     "```\n",
     "\n",
-    "Tot slot dienen er nog kleine aanpassingen te worden gedaan aan de code die de instanties maakt van **Coin**."
+    "Tot slot dienen er nog kleine aanpassingen te worden gedaan aan de code die de instanties maakt van `Coin`."
    ]
   },
   {
@@ -393,20 +394,20 @@
    "id": "af33d3b5",
    "metadata": {},
    "source": [
-    "## De klasse CryptoAlltimeHighNotification\n",
+    "## De klasse `CryptoAlltimeHighNotification`\n",
     "\n",
-    "Maak de klasse **CryptoAlltimeHighNotification**. Deze implementeert de interface **Observer**.\n",
+    "Maak de klasse `CryptoAlltimeHighNotification`. Deze implementeert de interface `Observer`.\n",
     "\n",
-    "De klasse **CryptoAlltimeHighNotification** heeft de volgende klasse-variabelen:\n",
+    "De klasse `CryptoAlltimeHighNotification` heeft de volgende klasse-variabelen:\n",
     "```java\n",
     "    private String code; // afkorting van de munt\n",
     "    private double highestPrice;\n",
     "```\n",
     "\n",
-    "De variabele **code** wordt door middel van de constructor geïnitialiseerd.\n",
+    "De variabele `code` wordt door middel van de constructor geïnitialiseerd.\n",
     "\n",
-    "Schrijf de implementatie van de methode **update**.\n",
-    "Deze methode vraagt de prijs op van de coin, en controleert of deze hoger is dan **highestprice**. Zo ja, print op de console een melding en actualiseer de waarde van **highestprice**.\n",
+    "Schrijf de implementatie van de methode `update`.\n",
+    "Deze methode vraagt de prijs op van de coin, en controleert of deze hoger is dan `highestprice`. Zo ja, print op de console een melding en actualiseer de waarde van `highestprice`.\n",
     "\n",
     "Bijvoorbeeld in het geval van Bitcoin:\n",
     "```\n",
@@ -424,47 +425,39 @@
    "metadata": {},
    "source": [
     "## Standaard klassen voor het observer pattern gebruiken\n",
-    "Java bevat standaard ondersteuning voor het observer-pattern door middel van de interface Observer en de klasse Observable.\n",
+    "Java bevat standaard ondersteuning voor het observer-pattern door middel van de interface `Observer` en de klasse `Observable`.\n",
     "\n",
     "Documentatie:\n",
     "https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/util/Observer.html\n",
     "https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/util/Observable.html\n",
     "\n",
     "````{note}\n",
-    "Hoewel **java.util.Observer** en **java.util.Observable** vanaf Java 9 worden beschouwd als *deprecated*, is het een goede oefening om het observer pattern ook met deze generieke interface en klasse te proberen. De reden dat ze *deprecated* zijn is dat men van mening is dat het originele observer pattern te beperkt is. Zo biedt het geen standaard regels als het gaat om de volgorde waarin de update-methode van observers wordt aangeroepen.\n",
+    "Hoewel `java.util.Observer` en `java.util.Observable` vanaf Java 9 worden beschouwd als *deprecated*, is het een goede oefening om het observer pattern ook met deze generieke interface en klasse te proberen. De reden dat ze *deprecated* zijn is dat men van mening is dat het originele observer pattern te beperkt is. Zo biedt het geen standaard regels als het gaat om de volgorde waarin de update-methode van observers wordt aangeroepen.\n",
     "````\n",
     "\n",
     "Maak een kopie van de package crypto. Verwijder in de kopie de interfaces Observer en Subject.\n",
     "\n",
-    "Laat de klasse **Market** de klasse **Observable** (uit *package* **java.util**) extenden.\n",
+    "Laat de klasse `Market` de klasse **Observable** (uit *package* `java.util`) extenden.\n",
     "\n",
-    "Verwijder de code voor het observer-pattern (de variabele **observers** en de methodes **registerObserver**, **removeObserver** en **notifyObservers**) uit **Market**.\n",
+    "Verwijder de code voor het observer-pattern (de variabele `observers` en de methodes `registerObserver`, `removeObserver` en `notifyObservers`) uit `Market`.\n",
     "\n",
-    "Laat de klasse **CryptoConsole** de interface **Observable** (uit *package* **java.util**) implementeren.\n",
+    "Laat de klasse `CryptoConsole` de interface `Observable` (uit *package* `java.util`) implementeren.\n",
     "\n",
-    "De methode **update** uit **java.util.Observer** heeft een andere definitie. Deze is meer generiek. Implementeer de juiste methode update.\n",
+    "De methode `update` uit `java.util.Observer` heeft een andere definitie. Deze is meer generiek. Implementeer de juiste methode update.\n",
     "\n",
-    "Het market-object kan uit de parameter **observable** gehaald worden met behulp van een cast:\n",
+    "Het market-object kan uit de parameter `observable` gehaald worden met behulp van een cast:\n",
     "```java\n",
     "Market market = (Market)observable;\n",
     "```\n",
     "\n",
-    "Ook CryptoAlltimeHighNotification dient aangepast te worden.\n",
+    "Ook `CryptoAlltimeHighNotification` dient aangepast te worden.\n",
     "\n",
     "Tenslotte nog twee kleine aanpassingen om het werkend te krijgen:\n",
-    "- In plaats van **registerObserver** bevat **Java.util.Observable** de methode **addObserver**.\n",
-    "- Om er voor te zorgen dat de update-methode van de observers wordt aangeroepen, moet vóór het aanroepen van **notifyObservers** in **market** de methode **setChanged** aangeroepen worden!\n",
+    "- In plaats van `registerObserver` bevat `java.util.Observable` de methode `addObserver`.\n",
+    "- Om er voor te zorgen dat de update-methode van de observers wordt aangeroepen, moet vóór het aanroepen van `notifyObservers` in `Market` de methode `setChanged` aangeroepen worden!\n",
     "\n",
-    "Als aanroep van **setChanged** wordt vergeten, dan lijkt het alsof het hele observer pattern om onverklaarbare redenen niet functioneert!"
+    "Als aanroep van `setChanged` wordt vergeten, dan lijkt het alsof het hele observer pattern om onverklaarbare redenen niet functioneert!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "698496b6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -479,7 +472,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.11+9-Ubuntu-0ubuntu2.18.04"
+   "version": "11.0.12+7-Ubuntu-0ubuntu3"
   }
  },
  "nbformat": 4,
