week 12 problem set

--- a/topics/7b_klassen.ipynb
+++ b/topics/7b_klassen.ipynb
@@ -52,7 +52,7 @@
     "## Klasse definitie\n",
     "\n",
     "Een klasse wordt als volgt gedefinieerd:\n",
-    "```Java\n",
+    "```java\n",
     "[abstract] [access modifier] class <naam> [extends <parent>] {\n",
     "    \n",
     "}\n",
@@ -75,7 +75,7 @@
     "Instantievariabelen zijn variabelen die beschikbaar zijn in de hele klasse. De declaratie is vergelijkbaar met variabelen in methodes, mogelijk aangevuld met keywords voor klassen. Ook in een klasse mogelijk om variabelen direct te initialiseren.\n",
     "\n",
     "Een instantievariabele wordt als volgt gedefinieerd:\n",
-    "```Java\n",
+    "```java\n",
     "[static] [access modifier] [final] <type> <naam>\n",
     "```\n",
     "\n",
@@ -96,7 +96,7 @@
     "## Methodes\n",
     "\n",
     "Een methode wordt als volgt gedefinieerd:\n",
-    "```Java\n",
+    "```java\n",
     "[static] [abstract/final] [access modifier] <returntype> <naam>([parameters])\n",
     "```\n",
     "    \n",
@@ -119,7 +119,7 @@
     "Een *constructor* is een bijzonder methode. Deze wordt uitgevoerd als een object wordt gemaakt met het keyword **new**.\n",
     "\n",
     "Een constructor wordt als volgt gedefinieerd:\n",
-    "```Java\n",
+    "```java\n",
     "[access modifier] <naam van klasse>([parameters])\n",
     "```\n",
     "\n",
@@ -155,12 +155,12 @@
     "setter: Wijzigt de waarde van een variabele\n",
     "\n",
     "Definitie setter:\n",
-    "```Java\n",
+    "```java\n",
     "public void set<naam van variabele, eerste letter hoofdletter>(<type> <naam van de variabele>)\n",
     "```\n",
     "\n",
     "Voorbeeld getter en setter van de variabele score (integer):\n",
-    "```Java\n",
+    "```java\n",
     "public int getScore() {\n",
     "    return score;\n",
     "}\n",
@@ -187,7 +187,7 @@
     "- Constanten zijn altijd **public static final**\n",
     "\n",
     "Voorbeeld:\n",
-    "```Java\n",
+    "```java\n",
     "public static final double PI = 3.14159265359;\n",
     "public static final String SERVER_IP = \"192.168.1.1\";\n",
     "```"
