--- a/topics/9b_threads.ipynb
+++ b/topics/9b_threads.ipynb
@@ -78,7 +78,7 @@
     "De methode **Thread.sleep** zorgt voor een pauze. Omdat deze mogelijk de checked exception **InterruptedException** gooit, is een *try..catch-block* noodzakelijk.\n",
     "\n",
     "Vanuit een main-methode is het eenvoudig om een aantal tellers te maken en uit te voeren:\n",
-    "```code\n",
+    "```java\n",
     "    Counter c1 = new Counter(\"Counter 1\", 20, 200);\n",
     "    Counter c2 = new Counter(\"Counter 2\", 10, 700);\n",
     "    Counter c3 = new Counter(\"Counter 3\", 10, 340);\n",
@@ -113,7 +113,7 @@
     "## De klasse Counter in een thread\n",
     "\n",
     "Voordat de Counter met een thread kan worden gebruikt, dient een kleine aanpassing te worden gemaakt: Counter moet de interface **Runnable** implementeren:\n",
-    "```Java\n",
+    "```java\n",
     "public class Counter implements Runnable {\n",
     "\n",
     "    private String name;\n",
@@ -144,12 +144,12 @@
     "```\n",
     "\n",
     "De interface Runnable bevat één methode:\n",
-    "```Java\n",
+    "```java\n",
     "void run()\n",
     "```\n",
     "\n",
     "Vervolgens kan de Counter met een thread worden uitgevoerd:\n",
-    "```Java\n",
+    "```java\n",
     "    Counter c1 = new Counter(\"Counter 1\", 20, 200);\n",
     "    Counter c2 = new Counter(\"Counter 2\", 10, 700);\n",
     "    Counter c3 = new Counter(\"Counter 3\", 10, 340);\n",
@@ -201,14 +201,6 @@
     "    }\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64240426",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
