--- a/exercises/observer_pattern.ipynb
+++ b/exercises/observer_pattern.ipynb
@@ -441,7 +441,7 @@
     "\n",
     "Verwijder de code voor het observer-pattern (de variabele **observers** en de methodes **registerObserver**, **removeObserver** en **notifyObservers**) uit **Market**.\n",
     "\n",
-    "Laat de klasse **CryptoConsole** de interface **Observable** (uit *package* **java.util**) implementeren.\n",
+    "Laat de klasse **CryptoConsole** de interface **Observer** (uit *package* **java.util**) implementeren.\n",
     "\n",
     "De methode **update** uit **java.util.Observer** heeft een andere definitie. Deze is meer generiek. Implementeer de juiste methode update.\n",
     "\n",
@@ -480,7 +480,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.11+9-Ubuntu-0ubuntu2.18.04"
+   "version": "11.0.12+7-Ubuntu-0ubuntu3"
   }
  },
  "nbformat": 4,
