--- a/_sources/topics/7b_klassen.ipynb
+++ b/_sources/topics/7b_klassen.ipynb
@@ -148,7 +148,7 @@
     "getter: Geeft de waarde van een variabele terug.\n",
     "\n",
     "Definitie:\n",
-    "```Java\n",
+    "```java\n",
     "public <type> get<naam van variabele, eerste letter hoofdletter>():\n",
     "```\n",
     "\n",
