--- a/_sources/exercises/iterator/index.ipynb
+++ b/_sources/exercises/iterator/index.ipynb
@@ -5,7 +5,7 @@
    "id": "8d7c972b",
    "metadata": {},
    "source": [
-    "# Practicum interator pattern\n",
+    "# Practicum iterator pattern\n",
     "## Doel\n",
     "- Kennismaken met het iterator pattern"
    ]
@@ -316,14 +316,6 @@
     "\n",
     "Een enhanched for-loop is mogelijk in combinatie met een eigen gemaakt klasse! Java 'weet' wanneer dit kan doordat de interface **Iterable** geïmplementeerd is."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f18bce8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
