--- a/topics/12b_iterator.ipynb
+++ b/topics/12b_iterator.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "e57d964e-b197-4ac3-b2ca-28b597cd4aaf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Iterator Pattern"
    ]
@@ -790,7 +792,7 @@
    "id": "1b23f9a6-76eb-46a3-a52d-e4d5a66699b0",
    "metadata": {},
    "source": [
-    "Om te beginnen een klasse `Range` die die de methode `interator` implementeert en een `RangeIterator` teruggeeft. Leet ook op dat de klasse een de instantie (`this`) als parameter doorgeeft aan `RangeIterator`."
+    "Om te beginnen is een klasse `Range` nodig die de methode `interator` implementeert en een `RangeIterator` teruggeeft. Let ook op dat de klasse een de instantie (`this`) als parameter doorgeeft aan `RangeIterator`."
    ]
   },
   {
