--- a/topics/13b_state.ipynb
+++ b/topics/13b_state.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "ce9777ad-f969-44a8-8d97-404fc43cc68d",
    "metadata": {
     "slideshow": {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "68632f07-a2fe-4434-a083-57ba0c220f5e",
    "metadata": {
     "slideshow": {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "f47f95c3-2ba8-4b26-9fec-9463cb313c40",
    "metadata": {
     "slideshow": {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "15f61658-4a88-4c1f-aace-1baa2319c186",
    "metadata": {
     "slideshow": {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "39ec6177-fd05-4948-ab80-76d3595192a5",
    "metadata": {
     "slideshow": {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "c86623c6-8142-4651-8f5a-10e923e23657",
    "metadata": {
     "slideshow": {
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "88fb50c5-7f09-4eb5-806e-87c68edc70a4",
    "metadata": {
     "slideshow": {
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "20084fb6-52b4-4082-af1e-fa52c01556a9",
    "metadata": {
     "slideshow": {
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "390b0009-2f05-4757-a1bb-68804a5073aa",
    "metadata": {
     "slideshow": {
@@ -782,11 +782,7 @@
    "source": [
     "public class Package {\n",
     "\n",
-    "    private State state;\n",
-    "\n",
-    "    public Package(State state) {\n",
-    "        this.state = state;\n",
-    "    }\n",
+    "    private State state = new OrderedState();\n",
     "\n",
     "    public void setState(State state) {\n",
     "        this.state = state;\n",
@@ -821,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "9eedaf28-0f73-410e-ab53-0937b8752722",
    "metadata": {
     "slideshow": {
@@ -831,12 +827,12 @@
    },
    "outputs": [],
    "source": [
-    "Package pkg = new Package(new OrderedState())"
+    "Package pkg = new Package()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "5c755435-707e-44f0-9f74-6853fbd19a2a",
    "metadata": {
     "slideshow": {
@@ -859,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "efaf9085-4fae-4e97-ae34-f1f4cc1c3488",
    "metadata": {
     "slideshow": {
@@ -874,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "a45e824b-018c-494a-b718-a20ac07f8b22",
    "metadata": {
     "slideshow": {
@@ -897,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "dc3174cd-1774-4be3-9a1c-ff691c924813",
    "metadata": {
     "slideshow": {
@@ -912,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "c79fd94a-1889-4ad1-921e-e66003f217ab",
    "metadata": {
     "slideshow": {
@@ -925,7 +921,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Package recieved by client\n"
+      "Package recieved by customer\n"
      ]
     }
    ],
@@ -993,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "c05ace7d-ea1c-4022-9080-391de490a572",
    "metadata": {
     "slideshow": {
@@ -1049,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "06b90d80-af84-40e0-8c17-eb4e6067b693",
    "metadata": {
     "slideshow": {
@@ -1079,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "id": "5cbc29c2-74a1-47a5-af00-e7d6c846826a",
    "metadata": {
     "slideshow": {
@@ -1102,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "a77ff8bd-4a2b-4fdd-8b3a-3d653c624aaa",
    "metadata": {
     "slideshow": {
@@ -1123,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "id": "30ed4fe7-96ab-4233-aee6-2ed71b08d23d",
    "metadata": {
     "slideshow": {
@@ -1156,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "id": "267b762c-01f6-4989-8d4d-29b82285994e",
    "metadata": {
     "slideshow": {
@@ -1195,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "id": "d378f443-c8e2-47a0-8beb-e9d5d3ecc3bc",
    "metadata": {
     "slideshow": {
@@ -1210,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 29,
    "id": "d577bded-aacc-41c5-b624-523c0963067a",
    "metadata": {
     "slideshow": {
@@ -1237,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "id": "6744aae1-c556-442c-aa25-d7d1774869dd",
    "metadata": {
     "slideshow": {
@@ -1262,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "id": "10b7e681-6d89-4e73-934d-ea12583dd7ca",
    "metadata": {
     "slideshow": {
