Added transparancy to RGB calculation

--- a/exercises/cats/index.ipynb
+++ b/exercises/cats/index.ipynb
@@ -100,9 +100,9 @@
     "    int blue = rgb & 0xFF;\n",
     "```\n",
     "\n",
-    "De afzonderlijke waardes voor rood, groen en blauw worden als volgt gecombineerd tot een RGB-integer:\n",
-    "```\n",
-    "    int rgb=(red<<16)+(green<<8)+blue;\n",
+    "De afzonderlijke waardes voor rood, groen en blauw worden (samen met transparantie, 0xFF000000) als volgt gecombineerd tot een RGB-integer:\n",
+    "```java\n",
+    "    rgb= 0xFF000000 + (red << 16) + (green << 8) + blue;\n",
     "```\n",
     "\n",
     "Voor veel effecten moeten berekeningen worden gemaakt met kleur-waardes.\n",
@@ -122,7 +122,7 @@
     "            red=avg; // gemiddelde intensiteit toekennen aan rood\n",
     "            green=0; // geen groen\n",
     "            blue=0; // geen blauw\n",
-    "            rgb=(red<<16)+(green<<8)+blue;\n",
+    "            rgb=0xFF000000 + (red<<16)+(green<<8)+blue; // 0xFF000000 -> transparantie\n",
     "            picture.setRGB(startx+x,starty+y,rgb);\n",
     "        }\n",
     "    }\n",
