--- a/exercises/pizza/index.ipynb
+++ b/exercises/pizza/index.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "    @Override\n",
     "    public String getDescription() {\n",
-    "        return super.getDesription()+\" Ham\";\n",
+    "        return super.getDescription()+\" Ham\";\n",
     "    }\n",
     "}\n",
     "```\n",
