--- a/topics/1a_inleiding.ipynb
+++ b/topics/1a_inleiding.ipynb
@@ -195,7 +195,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.11+9-Ubuntu-0ubuntu2"
+   "version": "11.0.16+8-post-Ubuntu-0ubuntu122.04"
   }
  },
  "nbformat": 4,
