--- a/topics/11a_singleton.ipynb
+++ b/topics/11a_singleton.ipynb
@@ -742,7 +742,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.12+7-Ubuntu-0ubuntu3"
+   "version": "18.0.2-ea+9-Ubuntu-2"
   }
  },
  "nbformat": 4,
