Add inversion of control comment

--- a/topics/15a_template.ipynb
+++ b/topics/15a_template.ipynb
@@ -99,7 +99,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -147,7 +150,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -173,7 +179,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -199,7 +208,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -215,7 +227,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -242,7 +257,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -292,6 +310,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "591b4167-2af2-4517-af49-74fac13b5667",
    "metadata": {
@@ -301,7 +320,9 @@
     "tags": []
    },
    "source": [
-    "IoC, ook wel het Hollywood Principle genoemd: *Don't call us, we'll call you*. Het ontkoppelen van de uitvoering van een taak van de implementatie. De implementerende subklassen roepen niet rechtstreeks methoden aan die verantwoordelijk zijn voor de uitvoering, maar roept een methode aan die door de basisklasse wordt geleverd (de *template method*), die zelf de methoden van de implementerende klasse aanroept."
+    "IoC, ook wel het Hollywood Principle genoemd: *Don't call us, we'll call you*. Het ontkoppelen van de uitvoering van een taak van de implementatie. De implementerende subklassen roepen niet rechtstreeks methoden aan die verantwoordelijk zijn voor de uitvoering, maar roept een methode aan die door de basisklasse wordt geleverd (de *template method*), die zelf de methoden van de implementerende klasse aanroept.\n",
+    "\n",
+    "Meer in het algemeen wordt dit principe [inversion of control](https://en.wikipedia.org/wiki/Inversion_of_control) genoemd."
    ]
   }
  ],
