--- a/exercises/practicum_adapter_pattern.ipynb
+++ b/exercises/practicum_adapter_pattern.ipynb
@@ -44,11 +44,11 @@
     "```Java\n",
     "public final class Message {\n",
     "\n",
-    "    public final String sender;\n",
-    "    public final LocalDateTime datetime;\n",
-    "    public final String text;\n",
+    "    private final String sender;\n",
+    "    private final LocalDateTime datetime;\n",
+    "    private final String text;\n",
     "\n",
-    "    public MessageStandard(String sender, LocalDateTime datetime, String text) {\n",
+    "    public Message(String sender, LocalDateTime datetime, String text) {\n",
     "        this.sender = sender;\n",
     "        this.datetime = datetime;\n",
     "        this.text = text;\n",
@@ -93,9 +93,9 @@
     "\n",
     "    public List<Message> getMessages() {\n",
     "        List<Message> messages = new ArrayList<>();\n",
-    "        messages.add(new MessageStandard(\"joe\", LocalDateTime.now(), \"Ik ben er over 5 minuten\" ));\n",
-    "        messages.add(new MessageStandard(\"Els\", LocalDateTime.now(), \"Ik heb joe gesproken. Hij staat achter ons idee.\" ));\n",
-    "        messages.add(new MessageStandard(\"ing\", LocalDateTime.now(), \"Uw tancode is 81824791\" ));\n",
+    "        messages.add(new Message(\"joe\", LocalDateTime.now(), \"Ik ben er over 5 minuten\" ));\n",
+    "        messages.add(new Message(\"Els\", LocalDateTime.now(), \"Ik heb joe gesproken. Hij staat achter ons idee.\" ));\n",
+    "        messages.add(new Message(\"ing\", LocalDateTime.now(), \"Uw tancode is 81824791\" ));\n",
     "        return messages;\n",
     "    }\n",
     "\n",
@@ -193,7 +193,7 @@
     "\n",
     "Laat de klasse **StandardMessage** de interface **Message** implementeren.\n",
     "\n",
-    "Zorg ervoor dat de datatypes in de andere **Message** zijn, en niet **StandardMessage**!\n",
+    "Zorg ervoor dat de gebruikte datatypes **Message** zijn, en niet **StandardMessage**!\n",
     "\n",
     "Test de main-methode. Als alles goed is gegaan, is er niets veranderd.\n",
     "\n",
@@ -292,7 +292,8 @@
     "\n",
     "messageViewer.view(messages);\n",
     "```\n",
-    "Plaats deze code in de main-methode en probeer het uit te voeren. Wat is het probleem?"
+    "Plaats deze code in de main-methode en probeer het uit te voeren. Wat is het probleem?\n",
+    "(foutmeldingen op de eerste 2 regels zouden er niet moeten zijn, en kunnen veroorzaakt worden doordat ergens als datatype **StandardMessage** wordt gebruikt in plaats van **Message**)"
    ]
   },
   {
